# optisim

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  quickstart.md  task_schema.md
examples/: README.md  behavior_tree_pickup.py  benchmark.py  benchmark_results.md  benchmark_run.py  bimanual_demo.py  bt_pickup.yaml  curriculum_training_demo.py  full_pipeline_demo.py  full_scenario_demo.py  gym_random_agent.py  hooks_demo.py  lfd_demo.py  mpc_balance.py  multi_robot_warehouse.yaml  open_door.py  open_door.yaml  perception_demo.py  pick_and_place.py  pick_and_place.yaml  pour_water.py  pour_water.yaml  primitive_sequence_demo.py  scene_graph_demo.py  stack_blocks.py  stack_blocks.yaml  state_estimation_demo.py  tamp_demo.py  urdf_demo.py
examples/robots/: mini_humanoid.yaml  rrbot.urdf  simple_arm.urdf  simple_arm.yaml
optisim/: __init__.py  __main__.py  cli.py  lfd.py  math3d.py  server.py  tamp.py
optisim/admittance/: __init__.py  admittance.py
optisim/analytics/: __init__.py  optimizer.py  trajectory.py
optisim/balance/: __init__.py  balance.py
optisim/batch/: __init__.py  runner.py
optisim/behavior/: __init__.py  bt_builder.py  bt_executor.py  bt_nodes.py
optisim/benchmark/: __init__.py  evaluator.py  reporter.py  suite.py
optisim/bimanual/: __init__.py  coordinator.py
optisim/contact/: __init__.py  forces.py  geometry.py  world.py
optisim/core/: __init__.py  action_primitives.py  task_composer.py  task_definition.py  task_validator.py
optisim/curriculum/: __init__.py  callbacks.py  scheduler.py  trainer.py
optisim/dexterous/: __init__.py  controller.py  hand.py  tactile.py
optisim/dynamics/: __init__.py  constraints.py  energy.py  rigid_body.py  validator.py
optisim/energy/: __init__.py  energy.py
optisim/estimation/: __init__.py  ekf.py
optisim/export/: __init__.py  benchmark.py  formats.py  scene.py  trajectory.py
optisim/faultdetect/: __init__.py  faultdetect.py
optisim/footstep/: __init__.py  analyzer.py  gait.py  planner.py
optisim/gait/: __init__.py  gait.py
optisim/grasp/: __init__.py  contact.py  executor.py  gripper.py  planner.py  stability.py
optisim/gym_env/: __init__.py  optisim_env.py  reward.py  wrappers.py
optisim/hooks/: __init__.py  built_ins.py  core.py
optisim/language/: __init__.py  grounding.py  parser.py  templates.py
optisim/mpc/: __init__.py  controller.py
optisim/multi/: __init__.py  assignment.py  collision.py  coordinator.py  fleet.py
optisim/occupancy/: __init__.py  occupancy.py
optisim/pathplan/: __init__.py  pathplan.py
optisim/perception/: __init__.py  detector.py
optisim/planning/: __init__.py  planner.py  rrt.py  smoothing.py
optisim/policy/: __init__.py  dataset.py  executor.py  network.py  trainer.py
optisim/primitives/: __init__.py  base.py  effects.py  executor.py  skills.py
optisim/reactive/: __init__.py  controller.py
optisim/recorder/: __init__.py  recorder.py
optisim/retarget/: __init__.py  mapping.py  skeleton.py  solver.py
optisim/rl/: __init__.py  buffer.py  callbacks.py  config.py  evaluate.py  network.py  optimizer.py  ppo.py
optisim/robot/: __init__.py  controller.py  humanoid.py  (+4 more)
tests/: test_admittance.py  test_analytics.py  test_balance.py  test_batch.py  test_behavior_tree.py  test_benchmark.py  test_bimanual.py  test_contact.py  test_curriculum.py  test_dexterous.py  test_dynamics.py  test_energy.py  test_estimation.py  test_export.py  test_faultdetect.py  test_footstep.py  test_gait.py  test_grasp.py  test_gym_env.py  test_hooks.py  test_humanoid.py  test_ik.py  test_integration.py  test_kinematics.py  test_language.py  test_lfd.py  test_library.py  test_mpc.py  test_multi_robot.py  test_occupancy.py  test_optimizer.py  test_pathplan.py  test_perception.py  test_planning.py  test_policy.py  test_primitives.py  test_reactive.py  test_recorder.py  test_retarget.py  test_rl.py  (+13 more)
(+27 files in other folders)
