[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "optisim"
version = "0.1.0"
description = "Lightweight humanoid robot task planner and simulator"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Timo Aeckerle" }
]
keywords = ["robotics", "simulation", "task-planning", "humanoid", "urdf"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "numpy>=1.26",
  "PyYAML>=6.0",
  "rich>=13.9",
]

[project.optional-dependencies]
viz = ["matplotlib>=3.8"]
dev = ["pytest>=8.0", "ruff>=0.4"]

[project.urls]
Homepage = "https://github.com/example/optisim"
Repository = "https://github.com/example/optisim"
Issues = "https://github.com/example/optisim/issues"

[project.scripts]
optisim = "optisim.cli:main"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["optisim*"]

[tool.setuptools.package-data]
optisim = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
