[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "optisim"
version = "0.12.0"
description = "Lightweight humanoid robot task planner and simulator"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Timo Aeckerle" }
]
keywords = ["robotics", "simulation", "task-planning", "humanoid", "urdf"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: Implementation :: CPython",
  "Typing :: Typed",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Scientific/Engineering :: Visualization",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "numpy>=1.26",
  "scipy>=1.12",
  "PyYAML>=6.0",
  "rich>=13.9",
]

[project.optional-dependencies]
gym = ["gymnasium>=0.29"]
viz = ["matplotlib>=3.8"]
web = ["fastapi>=0.115", "uvicorn>=0.30", "httpx>=0.27"]
rl = ["gymnasium>=0.29"]
dev = ["build>=1.2", "pytest>=8.0", "ruff>=0.4", "twine>=5.0", "httpx>=0.27"]

[project.urls]
Homepage = "https://github.com/TimoA200/optisim"
Repository = "https://github.com/TimoA200/optisim"
Documentation = "https://github.com/TimoA200/optisim/tree/main/docs"
"Bug Tracker" = "https://github.com/TimoA200/optisim/issues"

[project.scripts]
optisim = "optisim.cli:main"
optisim-server = "optisim.server:run_server"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["optisim*"]

[tool.setuptools.package-data]
optisim = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
